small edits to SP page, mostly fixes to new landing page as links weren't wrapped properly (only around linkBoxText)

--- a/spStyle.css
+++ b/spStyle.css
@@ -182,14 +182,14 @@ h1 {
     min-width: 500px;
     margin: 0;
     position: absolute;
-    bottom: 0;
+    bottom: 1%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 49;
 }
 
 span.copyrightDesktop {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 300;
     color: #000000;
     margin: 0;
