--- a/v2Mobile.css
+++ b/v2Mobile.css
@@ -227,7 +227,7 @@ h2 {
     position: absolute;
 }
 
-.linkBoxText {
+span.linkBoxText {
     position: inherit; 
     left: 50%;
     top: 50%;
